<resources>
    <string name="app_name">AlarmClockApp</string>
    <string name="button_send">Set Alarm</string>
    <string name="alarm_message">Alarm set for: </string>
    <string name="enter_the_correct_country_name">Enter the correct country name</string>
    <string name="england_flag">england_flag</string>
    <string name="go">go</string>
    <string name="k">K</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="o">O</string>
    <string name="n">N</string>
    <string name="l">L</string>
    <string name="p">P</string>
    <string name="h">H</string>
    <string name="m">M</string>
    <string name="g">G</string>
    <string name="c">C</string>
    <string name="r">R</string>
    <string name="a">A</string>
    <string name="j">J</string>
    <string name="clear">CLEAR</string>
    <string name="alarm_tone">Alarm Tone: </string>
    <string name="task_select">Choose Task: </string>
    <string name="edit_alarm">Edit Alarm…</string>
    <string name="backspace">Backspace</string>
    <string name="txt_maths_5">5</string>
    <string name="txt_maths_times">*</string>
    <string name="txt_maths_2">2</string>
    <string name="txt_maths_plus">+</string>
    <string name="txt_maths_7">7</string>
    <string name="txt_maths_title">Drag and Drop to solve the problem…</string>
    <string name="txt_maths_ans">= 17</string>
    <string name="btn_maths_go">Turn Off Alarm</string>
    <string name="btn_maths_clear">Clear</string>
    <string name="btn_maths_back1">Back1</string>
    <string name="txt_maths_info">*BODMAS applies</string>
    <string name="snooze">Snooze…</string>
    <string name="custom_message">Alarm Message: </string>
    <string name="message">Set message…</string>
</resources>

