<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_maths_title"
        android:id="@+id/btnTitle"
        android:textAlignment="center"
        android:textColor="@color/background_material_dark"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_maths_7"
        android:id="@+id/txt_maths_7"
        android:textSize="@dimen/maths_BtnNums"
        android:layout_alignTop="@+id/txt_maths_times"
        android:layout_toRightOf="@+id/btn_maths_go"
        android:layout_toEndOf="@+id/btn_maths_go"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_maths_2"
        android:id="@+id/txt_maths_2"
        android:textSize="@dimen/maths_BtnNums"
        android:layout_above="@+id/txt_maths_plus"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_maths_plus"
        android:id="@+id/txt_maths_plus"
        android:textSize="@dimen/maths_BtnNums"
        android:layout_alignTop="@+id/txt_maths_5"
        android:layout_toLeftOf="@+id/txt_maths_25"
        android:layout_toStartOf="@+id/txt_maths_25" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_maths_times"
        android:id="@+id/txt_maths_times"
        android:textSize="@dimen/maths_BtnNums"
        android:layout_below="@+id/btnTitle"
        android:layout_toLeftOf="@+id/txt_maths_5"
        android:layout_toStartOf="@+id/txt_maths_5"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_maths_5"
        android:id="@+id/txt_maths_5"
        android:textSize="@dimen/maths_BtnNums"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/btn_maths_go"
        android:layout_alignStart="@+id/btn_maths_go" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txt_maths_25"
        android:textSize="45dp"
        android:text="@string/txt_maths_ans"
        android:layout_marginBottom="50dp"
        android:layout_above="@+id/btn_maths_back1"
        android:layout_toRightOf="@+id/txtA5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtA4"
        android:background="@drawable/border"
        android:textAlignment="center"
        android:textSize="30dp"
        android:layout_alignTop="@+id/txtA3"
        android:layout_toRightOf="@+id/txtA3"
        android:layout_toEndOf="@+id/txtA3" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtA3"
        android:background="@drawable/border"
        android:textAlignment="center"
        android:textSize="30dp"
        android:layout_alignTop="@+id/txtA2"
        android:layout_toRightOf="@+id/txtA2"
        android:layout_toEndOf="@+id/txtA2" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtA1"
        android:background="@drawable/border"
        android:textAlignment="center"
        android:textSize="30dp"
        android:layout_alignBottom="@+id/txt_maths_25"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtA5"
        android:background="@drawable/border"
        android:textAlignment="center"
        android:textSize="30dp"
        android:layout_alignTop="@+id/txtA4"
        android:layout_toRightOf="@+id/txtA4"
        android:layout_toEndOf="@+id/txtA4" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtA2"
        android:background="@drawable/border"
        android:textAlignment="center"
        android:textSize="30dp"
        android:layout_alignTop="@+id/txtA1"
        android:layout_toRightOf="@+id/txtA1"
        android:layout_toEndOf="@+id/txtA1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_maths_go"
        android:id="@+id/btn_maths_go"
        android:textSize="20dp"
        android:layout_alignTop="@+id/btn_maths_clear"
        android:layout_centerHorizontal="true"
        android:onClick="check_ans" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_maths_clear"
        android:id="@+id/btn_maths_clear"
        android:onClick="clearBoxes"
        android:layout_marginBottom="17dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/btn_maths_go"
        android:layout_toLeftOf="@+id/btn_maths_go"
        android:textSize="15dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_maths_back1"
        android:id="@+id/btn_maths_back1"
        android:layout_alignTop="@+id/btn_maths_go"
        android:layout_alignLeft="@+id/txt_maths_7"
        android:layout_alignStart="@+id/txt_maths_7"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="15dp"
        android:onClick="back1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txt_maths_info"
        android:id="@+id/textView"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/txtA3"
        android:layout_alignLeft="@+id/txtA1"
        android:layout_alignStart="@+id/txtA1"
        android:layout_marginTop="6dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snooze"
        android:id="@+id/snooze"
        android:textSize="12sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="0dp" />


</RelativeLayout>