<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".settingAlarm">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timePicker"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/message_box"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:hint="@string/message"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/timePicker"
            android:onClick="customMessage"
            android:layout_marginTop="38dp"
            android:layout_alignParentRight="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:windowSoftInputMode="stateHidden" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/custom_message"
            android:id="@+id/customMessage"
            android:layout_alignParentStart="true"
            android:layout_below="@id/timePicker"
            android:layout_marginTop="50dp"
            android:layout_alignParentLeft="true" />

        <Spinner
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/alarmSpinner"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/message_box"
            android:layout_marginTop="35dp"
            android:spinnerMode="dropdown"
            android:gravity="end"
            android:layout_alignParentRight="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/alarm_tone"
            android:id="@+id/toneText"
            android:layout_alignParentStart="true"
            android:layout_below="@id/customMessage"
            android:layout_marginTop="40dp"
            android:layout_alignParentLeft="true" />

        <Spinner
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/taskSpinner"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/alarmSpinner"
            android:layout_marginTop="40dp"
            android:spinnerMode="dropdown"
            android:gravity="end"
            android:layout_alignParentRight="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/task_select"
            android:id="@+id/taskText"
            android:layout_alignParentStart="true"
            android:layout_below="@id/toneText"
            android:layout_marginTop="40dp"
            android:layout_alignParentLeft="true" />

        <Button
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:onClick="setAlarm"
            android:id="@+id/button"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/taskSpinner"
            android:layout_marginTop="20dp" />

    </RelativeLayout>

</ScrollView>